# majorfinder

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/workflows/: deploy.yml
data/clean/: analysis.ipynb  analysis_clean.ipynb
data/clean/docs/: EARN_MDN_1YR_Histogram.html
data/raw/: load_and_clean.py  preprocessing.ipynb
docs/: about.html  data.json  index.html
scripts/: generate_site_data.py  load_and_clean.py
